--- a/Project/Frontend/src/app/home/home.component.html
+++ b/Project/Frontend/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<ng-container *ngIf="!logged">
+  <div class="singUpCard">
+  <app-login></app-login>
+  </div>
+</ng-container>
+
