--- a/Project/Frontend/src/app/home/home.component.html
+++ b/Project/Frontend/src/app/home/home.component.html
@@ -1,6 +1,23 @@
-<ng-container *ngIf="!logged">
-  <div class="singUpCard">
-  <app-login></app-login>
-  </div>
-</ng-container>
+<!--<div class="signInUpCard">-->
+<!--  <app-login *ngIf="getMode()==='Login'"></app-login>-->
+<!--  <app-registration *ngIf="getMode()==='NewAcc'"></app-registration>-->
+<!--</div>-->
 
+
+<section class="home" id="home">
+
+  <div class="content">
+    <span>welcome Red Lantern Kitchen</span>
+    <h3>different spices for the different tastes 😋</h3>
+    <p>Red Lantern Kitchen aims to provide both exceptional flavor and convenience, and we hope that you will have a positive experience using our services</p>
+    <a href="#" class="btn">order now</a>
+  </div>
+
+  <div class="image">
+    <img src="https://www.pngall.com/wp-content/uploads/5/Noodles-PNG-Image.png" alt="" class="home-img">
+    <img src="https://cdn.discordapp.com/attachments/958000062556934215/1102633295675674674/home-parallax-img1.png" alt="" class="home-parallax-img">
+  </div>
+
+</section>
+
+<app-product-list></app-product-list>
