--- a/Project/Frontend/src/app/header/header.component.html
+++ b/Project/Frontend/src/app/header/header.component.html
@@ -4,13 +4,13 @@
   <a href="#" class="logo"> Red Lantern Kitchen </a>
 
   <nav class="navbar">
-    <a href="#home">home</a>
-    <a href="about">about</a>
-    <a href="#account">account</a>
-    <a href="products">menu</a>
-    <a href="category">order</a>
-    <a href="#blogs">blogs</a>
+    <a href="home">Home</a>
+    <a href="about">About</a>
+    <a href="products">Menu</a>
+    <a href="cart">Order card</a>
+    <a href="profile">Profile</a>
+    <a href="signin">Sign in</a>
+<!--    <a href="signup">Sign up</a>-->
 
   </nav>
-  <button (click)="logout()" routerLink="/home">Log out</button>
 </header>
