--- a/Project/Frontend/src/app/product-list/product-list.component.css
+++ b/Project/Frontend/src/app/product-list/product-list.component.css
@@ -107,3 +107,49 @@ img{
   font-size: 3rem;
   color: #E21818;
 }
+
+.input-box{
+  width: 100px;
+  margin: auto;
+}
+.form{
+  display: flex;
+  flex-direction: column;
+  padding: 2%;
+  align-items: center;
+}
+label{
+  margin: 3% 0%;
+  font-size: 20px;
+  font-family: Arial;
+  color: grey;
+  font-weight: 500;
+}
+input{
+  border-radius: 4px;
+  border: 3px solid lightgrey;
+  padding: 10px 3px;
+  width: 300px;
+  height: 10px;
+}
+input::placeholder{
+  color: grey;
+  font-family: Arial;
+  font-weight: 400;
+  font-size: 10px;
+}
+.submitButton{
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin: 5% auto;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: #ff5361;
+  color: white;
+  font-family: Arial;
+  font-size: 100%;
+  align-items: center;
+
+}
