--- a/Project/Frontend/src/app/cart/cart.component.html
+++ b/Project/Frontend/src/app/cart/cart.component.html
@@ -1,3 +1,4 @@
+<div class="login blue-button buy-button" *ngIf="!this.logged" routerLink="/signin">Log in to see cart</div>
 <div class="page-borders">
     <div class="product-cards">
         <ng-container *ngFor="let cartitem of cart">
