--- a/Project/Frontend/src/app/product-list/product-list.component.html
+++ b/Project/Frontend/src/app/product-list/product-list.component.html
@@ -1,12 +1,9 @@
 
-
 <div class="heading">
   <span>our menu</span>
   <h3>our top dishes</h3>
 </div>
 <div class="s">
-
-
 
   <div class="box-container" *ngFor="let product of products">
 
@@ -16,15 +13,7 @@
         <img src="{{product.image}}"alt="">
       </div>
       <div class="content">
-        <h3>delicious food</h3>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star-half-alt"></i>
-          <span> (50) </span>
-        </div>
+        <h3>{{product.name}}</h3>
         <div class="price">${{product.price}} </div>
         <button class="btn" (click)="addToCart(product.id, $event)">add to cart</button>
       </div>
