--- a/Project/Frontend/src/app/home/home.component.html
+++ b/Project/Frontend/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     <span>welcome Red Lantern Kitchen</span>
     <h3>different spices for the different tastes 😋</h3>
     <p>Red Lantern Kitchen aims to provide both exceptional flavor and convenience, and we hope that you will have a positive experience using our services</p>
-    <a href="#" class="btn">order now</a>
+    <a href="products" class="btn">order now</a>
   </div>
 
   <div class="image">
@@ -20,4 +20,7 @@
 
 </section>
 
+<div class="underline"></div>
+
 <app-product-list></app-product-list>
+<app-category-list></app-category-list>
