--- a/Project/Frontend/src/app/cart/cart.component.html
+++ b/Project/Frontend/src/app/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="login blue-button buy-button" *ngIf="!this.logged" routerLink="/signin">Log in to see cart</div>
+<div class="login red-button buy-button" *ngIf="!this.logged" routerLink="/signin">Log in to see cart</div>
 <div class="page-borders">
     <div class="product-cards">
         <ng-container *ngFor="let cartitem of cart">
@@ -9,7 +9,7 @@
                     <h2>{{cartitem.id}}</h2>
                     <p>rating: 4.3</p>
                     <h4>Price:{{cartitem.product.price}}</h4>
-                    <div class="blue-button" (click)="deleteFromCart(cartitem.id)">remove from cart</div>
+                    <div class="red-button" (click)="deleteFromCart(cartitem.id)">remove from cart</div>
                 </div>
                 <div class="amount">{{cartitem.quantity}}</div>
             </div>
@@ -18,7 +18,7 @@
     <div class="summarize">
 
         <div class="total">Total: {{total}}</div>
-        <div class="blue-button buy-button" (click)="deleteAll()">Buy</div>
+        <div class="red-button buy-button" (click)="deleteAll()">Buy</div>
     </div>
 
 </div>
